--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .main-bg {
-  height: 600px;
+  min-height: 600px;
   background-image: url('./route/AtleticoMadrid.jpeg');
   background-size: contain;
   background-position: center;
+}
+
+button {
+  display: block;
+  margin: 10px auto;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
+
+.col-md-4 {
+  text-align: center;
 }
